# nenos-academy-shelter-app

./: .env.example  CICD-README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd-pipeline.yaml
helm-chart/: README.md
helm-chart/shelter-app/: Chart.yaml  values.yaml
helm-chart/shelter-app/templates/: _helpers.tpl  deployment-api.yaml  deployment-db-mongo.yaml  deployment-db-sql.yaml  deployment-web.yaml  hpa-api.yaml  ingress-web.yaml  pvc-db-mongo.yaml  pvc-db-sql.yaml  service-api.yaml  service-db-mongo.yaml  service-db-sql.yaml  service-web.yaml
kube/: README.md  deployment-api.yaml  deployment-db-mongo.yaml  deployment-db-sql.yaml  deployment-web.yaml  ingress-web.yaml  service-api.yaml  service-mongo.yaml  service-sql.yaml  service-web.yaml
src/: config.py  init_db_mongo.py  init_db_sql.py  init_dbs.py
src/api/: main.py
src/api/routers/: animals.py  status.py
src/common/data_transfer_objects/: animals.py
src/db/mongo/: connection.py  init_db.py
src/db/mongo/models/: __init__.py  adoption_form.py  base.py  rescue_form.py  return_form.py
src/db/sql/: connection.py  init_db.py
src/db/sql/models/: __init__.py  animal.py  foster_home.py  person.py
src/db/sql/queries/: animals.py
src/models/: adoption_form.py  animal.py  foster_home.py  mongo_base.py  person.py  rescue_form.py  return_form.py  sql_base.py
src/web/: main.py
src/web/callbacks/: __init__.py  add_animal.py  api_status.py
src/web/components/: add_animal.py  api_status.py  header.py  loading.py
test/: test_models.py
