[tool.poetry]
name = "nenos-academy-shelter-app"
version = "0.1.0"
description = "Animal Shelter Dash App"
authors = ["Alexandru Niculae <alexandru.niculae13@yahoo.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
pytest = "^8.3.3"
pylint = "^3.3.1"
# required for sql:
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
# required for mongodb:
pymongo = {version = "^4.6", optional = false, extras = ["bson"]}
# other imports
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
dash = "^2.18.2"
requests = "^2.32.3"
dash-mantine-components = "^0.12.1"
dash-iconify = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
